@@ -1,6 +1,8 @@
 PHP 4                                                                      NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2006, Version 4.4.3
+- Added control character checks for cURL extension's open_basedir/safe_mode
+  checks. (Ilia)
 - Fixed a possible buffer overflow inside create_named_pipe() for Win32 systems
   in libmysql.c. (Ilia)
 - Updated PCRE to version 6.6. (Andrei)
